objects/VisualAntidote__Submission__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Context_Id__c</fullName>
        <description>User Id of User who submitted the record</description>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Context_Type__c</fullName>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                    <default>true</default>
                    <label>Admin</label>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Document_Ids__c</fullName>
        <label>Document Ids</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__E_Sign__c</fullName>
        <label>E-Sign</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ClassicRegular</fullName>
                </value>
                <value>
                    <fullName>ClassicLightning</fullName>
                </value>
                <value>
                    <fullName>NativeRegular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__IP_Address__c</fullName>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Objects_XML__c</fullName>
        <label>Objects_XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Objects__c</fullName>
        <label>Objects</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Primary_Object__c</fullName>
        <label>Primary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Record_Created_Updated__c</fullName>
        <label>Record Created/Updated</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>StagingReady</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Data_XML2__c</fullName>
        <label>Submitted Data XML2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Data_XML3__c</fullName>
        <label>Submitted Data XML3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Data_XML__c</fullName>
        <label>Submitted Data XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Html__c</fullName>
        <label>Submitted Html</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Prefill_Obj_Id__c</fullName>
        <label>Submitted Prefill Obj Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Prefill_Obj_Info__c</fullName>
        <label>Submitted Prefill Obj Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__User_Content_ID__c</fullName>
        <label>User Content ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Verification_Emails__c</fullName>
        <label>Verification Emails</label>
        <type>TextArea</type>
    </fields>
    <label>Submission</label>
    <listViews>
        <fullName>Nolan_Daigle_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <columns>NAME</columns>
        <columns>VisualAntidote__Submission_Date__c</columns>
        <columns>VisualAntidote__Objects_XML__c</columns>
        <columns>VisualAntidote__Status__c</columns>
        <columns>VisualAntidote__E_Sign__c</columns>
        <columns>VisualAntidote__Form__c</columns>
        <columns>VisualAntidote__User_Content_ID__c</columns>
        <columns>VisualAntidote__Objects__c</columns>
        <columns>VisualAntidote__Primary_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__Custom_Submission_View</fullName>
        <columns>NAME</columns>
        <columns>VisualAntidote__Form__c</columns>
        <columns>VisualAntidote__Objects__c</columns>
        <columns>VisualAntidote__Objects_XML__c</columns>
        <columns>VisualAntidote__Primary_Object__c</columns>
        <columns>VisualAntidote__Submission_Date__c</columns>
        <columns>VisualAntidote__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Custom Submission View</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__Native_Submissions_View</fullName>
        <columns>NAME</columns>
        <columns>VisualAntidote__Form__c</columns>
        <columns>VisualAntidote__Objects__c</columns>
        <columns>VisualAntidote__Objects_XML__c</columns>
        <columns>VisualAntidote__Primary_Object__c</columns>
        <columns>VisualAntidote__Submission_Date__c</columns>
        <columns>VisualAntidote__Status__c</columns>
        <columns>VisualAntidote__Is_Native__c</columns>
        <columns>VisualAntidote__Document_Ids__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisualAntidote__Is_Native__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Native Submissions View</label>
    </listViews>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Submission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>